--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="author" content="Kelvin Kast" />
+    <meta name="description" content="Kelvin Kast Portfolio Website" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Kelvin Kast</title>
+    <link rel="canonical" href="https://kelvinkast.com" />
+    <title>Kelvin Kast | Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
